fluxcd/apps/overlays/production/nextcloud-external/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
  namespace: temple-of-time
spec:
  ports:
    - port: 11000
      targetPort: 11000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud-external
  namespace: temple-of-time
subsets:
  - addresses:
      - ip: 10.30.1.123
    ports:
      - port: 11000
        name: http
