fluxcd/apps/overlays/production/nextcloud-external/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nextcloud-external
  namespace: temple-of-time
spec:
  host: nextcloud-external.temple-of-time.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
