fluxcd/apps/overlays/production/nextcloud-external/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-external
  namespace: temple-of-time
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: hyrule-castle
  hostnames:
    - "ncloud.optcp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-external
          port: 11000
